--- a/dsa/dsa/dsa.vcxproj
+++ b/dsa/dsa/dsa.vcxproj
@@ -136,6 +136,7 @@
     <ClCompile Include="queue.cpp" />
     <ClCompile Include="search.cpp" />
     <ClCompile Include="stack.cpp" />
+    <ClCompile Include="tree.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="commonheaders.h" />
@@ -143,6 +144,7 @@
     <ClInclude Include="queue.h" />
     <ClInclude Include="search.h" />
     <ClInclude Include="stack.h" />
+    <ClInclude Include="tree.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
